welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: '(' expected but '{' found.
}else if {
         ^Program:7: error: illegal start of simple expression
}}
 ^