welcome.lessons.welcome.loopfor.LoopFor.scala.code
for ( x <- 1 to 7)
{if (estSurBiscuit){
prendBiscuit()	
}else if {
	avance()
	
}}


for ( y <- 1 to 7){
	recule()
	
	
}
poseBiscuit()
